4172
this isn't specific to the Eclipse plugin. the 2.8.0.RC3 command line compiler gives:
```scala
  ~> scalac28 S.scala
S.scala:6: error: illegal start of simple pattern
  	val Array( who, what @ _* ) = aString split (" ")
                                  ^
```
